@@ -1,3 +1,8 @@
+2004-01-19  Scott Goodwin  <scott@scottg.net>
+
+      * nsopenssl.h, nsopenssl.c, ssl.c: Removed rest of BIO stuff in lieu of
+      straight SSL calls. Cleaned up NsOpenSSLConnHandshake().
+
 2004-01-17  Scott Goodwin  <scott@scottg.net>
 
       * nsopenssl.h, ssl.c, tclcmds.c: Ripped out use of BIOs in
